Added samples in the samples/ directory Updated .gitignore to ignore the debugging directory

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,6 @@ dmypy.json
 
 # Default target directory for Insights clients
 discovery_insights_clients/
+
+# Default dev debugging directory
+debugging/
